Correct SQL console settings.